# routes/swagger.js
@@ -1,7 +1,10 @@
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
+
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.get('/api-docs', 
+    // #swagger.ignore = true
+    swaggerUi.setup(swaggerDocument)); 
 
 module.exports = router;
